<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodOrderActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline03"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="@id/guideline01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/green_water"
            android:padding="20dp"
            android:text="@string/Food_Order"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/vShop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/shopping_button"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_shopping_cart_24" />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/quantity_background"
                android:gravity="center"
                android:text="@string/start_quantity"
                android:textColor="@color/black" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline01">

        <TextView
            android:id="@+id/tvWelcome"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome_vip"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline03">

        <ListView
            android:id="@+id/lvFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline02">

        <LinearLayout
            android:id="@+id/vPrice"
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:text="@string/total"
                android:textSize="20sp"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvMoney"
                android:textColor="@color/black"
                android:paddingRight="10dp"
                android:textAlignment="viewEnd"
                android:text="@string/first_cost"
                android:layout_weight="2"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vPrice"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/action_buy"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>